web_based_ingress/templates/service_foo.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-hello-world
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    host: foo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
