web_based_ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-host-baesd-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: "foo.frontend.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foo-hello-world
            port:
              number: 8080
  - host: "bar.frontend.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bar-hello-world
            port:
              number: 8080
